--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,9 +40,11 @@ jobs:
           python fetch_data.py
 
       - name: Commit and push predictions.csv
+        env: 
+          GH_PAT: ${{ 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 }}
         run: |
           git config --global user.email "leolin900114@gmail.com"
           git config --global user.name "leolin-hub"
           git add predictions.csv
           git commit -m "Add predictions.csv"
-          git push origin main
+          git push https://leolin-hub:${GH_PAT}@github.com/leolin-hub/TestCICD.git
