Add script to generate toy data and predictions

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,7 +44,7 @@ jobs:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config --global user.email "leolin900114@gmail.com"
-          git config --global user.name "sausage9180"
+          git config --global user.name "leolin-hub"
           git add predictions.csv
           git commit -m "Add predictions.csv"
           git push https://leolin-hub:${{ secrets.GH_PAT }}@github.com/leolin-hub/TestCICD.git
