--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,6 +45,7 @@ jobs:
         run: |
           git config --global user.email "leolin900114@gmail.com"
           git config --global user.name "leolin-hub"
+          git remote set-url origin https://leolin-hub:${{ secrets.GH_PAT }}@github.com/leolin-hub/TestCICD.git
           git add predictions.csv
           git commit -m "Add predictions.csv"
-          git push https://leolin-hub:${{ secrets.GH_PAT }}@github.com/leolin-hub/TestCICD.git
+          git push origin main
