--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,12 +40,11 @@ jobs:
           python fetch_data.py
 
       - name: Commit and push predictions.csv
-        env: 
-          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          git config --global user.email "leolin900114@gmail.com"
-          git config --global user.name "leolin-hub"
-          git remote set-url origin https://leolin-hub:${{ secrets.GH_PAT }}@github.com/leolin-hub/TestCICD.git
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add predictions.csv
           git commit -m "Add predictions.csv"
           git push origin main
+        env: 
+          GH_PAT: ${{ secrets.GH_PAT }}
