--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,12 +39,8 @@ jobs:
         run: |
           python fetch_data.py
 
-      - name: Commit and push predictions.csv
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add predictions.csv
-          git commit -m "Add predictions.csv"
-          git push origin main
-        env: 
-          GH_PAT: ${{ secrets.GH_PAT }}
+      - name: Upload prediction results
+        uses: actions/upload-artifact@v3
+        with:
+          name: predictions
+          path: predictions.csv
